Added periods to sentences

--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
                   <h4 class="subheading">First Song</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">First song I recorded in New York City</p>
+                  <p class="text-muted">First song I recorded in New York City.</p>
                 </div>
               </div>
             </li>
@@ -155,7 +155,7 @@
                   <h4 class="subheading">A Performer is Born</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">My first big performance at The Bitter End in New York City</p>
+                  <p class="text-muted">My first big performance at The Bitter End in New York City.</p>
                 </div>
               </div>
             </li>
@@ -171,7 +171,7 @@
                   <h4 class="subheading">Off to College</h4>
                 </div>
                 <div class="timeline-body">
-                  <p class="text-muted">Moving to Nashville Tennessee</p>
+                  <p class="text-muted">Moving to Nashville Tennessee.</p>
                 </div>
               </div>
             </li>
