--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading">Music</h2>
-        <h3 class="section-subheading text-muted"></h3>
+        <h3 class="section-subheading text-muted">Coming soonest to a radio near you!</h3>
       </div>
     </div>
     <div class="row">
