--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
     <div class="row">
       <div class="col-lg-12 text-center">
         <h2 class="section-heading">Videos</h2>
-        <h3 class="section-subheading text-muted">Coming soonest once Tito actually finishes it!</h3>
+        <h3 class="section-subheading text-muted">Coming Soon</h3>
       </div>
     </div>
     
