--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@
       <div class="row text-center">
         
           <div class="col-md-4">
-            <h4 class="service-heading">Curb Event Center - Nashville,TN</h4>
-            <p class="text-muted">September 16 2018</p>
+            <h4 class="service-heading">Curb Cafe - Nashville,TN</h4>
+            <p class="text-muted">September 24 2018</p>
           </div>
         
       </div>
