Changed format of shows

--- a/index.html
+++ b/index.html
@@ -265,8 +265,8 @@
       <div class="row text-center">
         
           <div class="col-md-4">
-            <h4 class="service-heading">Curb Cafe - Nashville,TN</h4>
-            <p class="text-muted">September 24 2018</p>
+            <h4 class="service-heading" style=" display: inline;float:left; vertical-align: top;line-height: 10px;" >Curb Cafe - Nashville,TN</h4>
+            <p class="text-muted" style=" display: inline;float:right; vertical-align: top;line-height: 28px;" >September 24 2018</p>
           </div>
         
       </div>
