--- a/404.html
+++ b/404.html
@@ -27,6 +27,9 @@
   
 
   
+    <link rel="shortcut icon" type="image/x-icon" href="https://zoeclarkmusic.com/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="https://zoeclarkmusic.com/favicon.ico">
+  
 
   <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
